--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4"
-  }
+  },
+  "engines": {
+    "node": "16.x"
+}
 }
